# pomodoro

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
src/: App.vue  main.scss  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/store/: permissions.ts
src/views/Pomodoro/: Pomodoro.vue  index.ts
src/views/Pomodoro/components/: Configuration.vue
src/views/Pomodoro/store/: config.ts
